--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "resolve-url-loader": "^3.1.1",
         "sass": "^1.26.3",
         "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "minimist": ">=1.2.5"
     }
 }
