--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "rcrowe/twigbridge": "^0.11.3",
-        "panique/laravel-sass": "dev-master"
+        "rcrowe/twigbridge": "^0.11.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
