--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "laracasts/utilities": "^3.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "rcrowe/twigbridge": "^0.11.3"
